# free-gpt

./: README.md
test/go/: go.mod
test/go/cmd/test-gpt/: test-gpt.go
test/rust/free-gpt/: Cargo.toml
test/rust/free-gpt/src/: main.rs
test/rust/free-gpt/src/db/: mod.rs
test/rust/free-gpt/src/env/: mod.rs
test/rust/free-gpt/src/gpt_api/: mod.rs
test/rust/free-gpt/src/prompts/: mod.rs
